# django-jsonforms

./: CHANGELOG.md  pyproject.toml
django_jsonforms/: forms.py
