[tool.poetry]
name = "django-jsonforms"
version = "1.1.3"
description = "JSON Schema forms for Django"
authors = ["Dorian Péron <dorianperon.i@gmail.com>"]
license = "LICENSE.txt"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
Django = ">=4"
jsonschema = "^4.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
